--- a/feign-spring-boot-starter/pom.xml
+++ b/feign-spring-boot-starter/pom.xml
@@ -2,11 +2,14 @@
 
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <parent>
+        <groupId>io.github.wangqifox</groupId>
+        <artifactId>spring-feign</artifactId>
+        <version>3.0-SNAPSHOT</version>
+    </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>io.github.wangqifox</groupId>
     <artifactId>feign-spring-boot-starter</artifactId>
-    <version>3.0-SNAPSHOT</version>
 
     <name>feign-spring-boot-starter</name>
 
