--- a/feign-spring-boot-samples/pom.xml
+++ b/feign-spring-boot-samples/pom.xml
@@ -11,6 +11,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>feign-spring-boot-samples</artifactId>
+    <packaging>pom</packaging>
     <name>feign-spring-boot-samples</name>
 
     <modules>
